--- a/Drip/Components/SideBar/AppSideBar.razor
+++ b/Drip/Components/SideBar/AppSideBar.razor
@@ -1,6 +1,11 @@
 @inject NavigationManager Navigation
 
 <nav class="sidebar-nav">
+    <!-- Document Selector for Mobile -->
+    <div class="sidebar-document-selector">
+        <DocumentSelector />
+    </div>
+    
     <div class="nav-item">
         <NavLink Match="NavLinkMatch.All" href="" class="nav-link">
             <span class="nav-link-text">Home</span>
