--- a/Drip/Pages/Operation.razor
+++ b/Drip/Pages/Operation.razor
@@ -13,7 +13,7 @@
     }
     else
     {
-        <PageTitle>@OpenApiOperation.Summary | drip</PageTitle>
+        <PageTitle>@OpenApiOperation.Summary</PageTitle>
         
         <div class="operation-detail">
             @if (_tag is not null)
